// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Table > should render correctly 1`] = `
<table
  className="govuk-table"
>
  <caption
    className="govuk-table__caption govuk-table__caption--l"
  >
    test table
  </caption>
  <thead
    className="govuk-table__head"
  >
    <tr
      className="govuk-table__row"
    >
      <th
        className="govuk-table__header align-middle"
        scope="col"
      >
        test col 1
      </th>
      <th
        className="govuk-table__header align-middle"
        scope="col"
      >
        test col 2
      </th>
    </tr>
  </thead>
  <tbody
    className="govuk-table__body"
  >
    <tr
      className="govuk-table__row"
    >
      <th
        className="govuk-table__header align-middle"
        scope="row"
      >
        test row 1
      </th>
      <td
        className="govuk-table__cell align-middle"
      >
        1
      </td>
    </tr>
    <tr
      className="govuk-table__row"
    >
      <th
        className="govuk-table__header align-middle"
        scope="row"
      >
        test row 2
      </th>
      <td
        className="govuk-table__cell align-middle"
      >
        2
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table > should render correctly with jsx element 1`] = `
<table
  className="govuk-table"
>
  <caption
    className="govuk-table__caption govuk-table__caption--l"
  >
    test table
  </caption>
  <thead
    className="govuk-table__head"
  >
    <tr
      className="govuk-table__row"
    >
      <th
        className="govuk-table__header align-middle"
        scope="col"
      >
        test col 1
      </th>
      <th
        className="govuk-table__header align-middle"
        scope="col"
      >
        test col 2
      </th>
    </tr>
  </thead>
  <tbody
    className="govuk-table__body"
  >
    <tr
      className="govuk-table__row"
    >
      <th
        className="govuk-table__header align-middle"
        scope="row"
      >
        test row 1
      </th>
      <td
        className="govuk-table__cell align-middle"
      >
        <p>
          test 1
        </p>
      </td>
    </tr>
    <tr
      className="govuk-table__row"
    >
      <th
        className="govuk-table__header align-middle"
        scope="row"
      >
        test row 2
      </th>
      <td
        className="govuk-table__cell align-middle"
      >
        2
      </td>
    </tr>
  </tbody>
</table>
`;

exports[`Table > should render correctly without a header 1`] = `
<table
  className="govuk-table"
>
  <caption
    className="govuk-table__caption govuk-table__caption--l"
  >
    test table
  </caption>
  <thead
    className="govuk-table__head"
  >
    <tr
      className="govuk-table__row"
    >
      <th
        className="govuk-table__header align-middle"
        scope="col"
      >
        test col 1
      </th>
      <th
        className="govuk-table__header align-middle"
        scope="col"
      >
        test col 2
      </th>
    </tr>
  </thead>
  <tbody
    className="govuk-table__body"
  >
    <tr
      className="govuk-table__row"
    >
      <td
        className="govuk-table__cell align-middle"
      >
        1
      </td>
    </tr>
    <tr
      className="govuk-table__row"
    >
      <td
        className="govuk-table__cell align-middle"
      >
        2
      </td>
    </tr>
  </tbody>
</table>
`;
